--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.0.3",
     "express": "4.17.1",
     "express-joi-validation": "^5.0.1",
     "joi": "^17.8.3",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
     "morgan": "1.10.0",
     "shortid": "^2.2.16"
